# keam_helper_project

./: .gitignore  AGENT_INSTRUCTIONS.md  firebase.json
Backend/: .env.example  README.md  category_info.json  clear_data.py  go.mod  insert_data.py  rank_info_2026_first_allotment.json
Backend/cmd/db_importer/: main.go
Backend/cmd/server/: main.go
Backend/cmd/verify_db/: main.go
Backend/internal/common/: response.go
Backend/internal/config/: config.go
Backend/internal/database/: postgres.go
Frontend/: .firebaserc  build.py  firebase.json  index.html  script.js  sitemap.xml  style.css
Frontend/.firebase/: hosting..cache  hosting.ZGlzdA.cache
Frontend/public/: style.css
pipeline/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
pipeline/app/: __init__.py  config.py  dependencies.py  main.py
pipeline/app/api/: health.py  insert.py  preview.py  process.py  router.py  settings.py  upload.py
pipeline/app/core/: data_cleaner.py  ocr_engine.py  ocr_pipeline.py  pdf_splitter.py  prompt_templates.py  validator.py
pipeline/app/db/: database.py  models.py  repository.py
pipeline/app/schemas/: common.py  ocr.py  preview.py  record.py  upload.py
pipeline/app/static/css/: style.css
pipeline/app/static/js/: preview.js  processing.js  upload.js
pipeline/app/templates/: base.html  index.html  preview.html  processing.html
pipeline/app/utils/: file_utils.py  image_utils.py  logging_config.py
pipeline/data/results/: 38f1bb3e-c54b-4652-bd38-498b35324434.json
pipeline/tests/: conftest.py  test_data_cleaner.py  test_validator.py
(+8 files in other folders)
